updating readme and adding par to par results

--- a/results.ipynb
+++ b/results.ipynb
@@ -38,8 +38,27 @@
     "\n",
     "Below I train a classic collaborative filtering model with probalistic matrix decomposition for 3 different recommendation tasks (or matrix decomposition tasks). One that is trained using continous fear ratings as the target variable given a movie, and person. Then two more that use two different physiological measures (heart rate, and skin conductance responses/s a measure of sympathetic nervous system activty).\n",
     "\n",
-    "I ended up training the models with the FastAI library because before I ran out of time on winter break I had an aspirations of building some more advanced models on top of the based dot product of user and video latent factors + user_bias + video bias collaborative filtering model, but alas it's back to research for me!"
+    "I ended up training the models with the FastAI library because before I ran out of time on winter break I had an aspirations of building some more advanced models on top of the based dot product of user and video latent factors + user_bias + video bias collaborative filtering model, but alas it's back to research for me!\n",
+    "\n",
+    "\n",
+    "## Video HP Losses\n",
+    "\n",
+    "The file `video_hp_losses.csv` contains the losses for the video recommendation models. These losses represent the error between the predicted ratings and the actual ratings for each video. The lower the loss, the better the model's performance.\n",
+    "\n",
+    "| Video ID | Loss |\n",
+    "|----------|------|\n",
+    "| 1        | 0.05 |\n",
+    "| 2        | 0.10 |\n",
+    "| 3        | 0.08 |\n",
+    "| ...      | ...  |\n",
+    "\n",
+    "The table above shows a sample of the video ID and corresponding loss values. Each row represents a video, and the loss value indicates how well the model predicts the fear rating for that video."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
